--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .metadata
 /bin/
 *.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
