ClientEdit (pas totalement fini)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
+*.class
