--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ WSPCE_JAVA/V1-old/bin/view/app/GestionProjet$1.class
 WSPCE_JAVA/V1-old/bin/view/app/GestionProjet.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$ModeEdition.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
+WSPCE_JAVA/V1-old/bin/model/data/Client.class
+WSPCE_JAVA/V1-old/bin/model/orm/AccessProjet.class
+WSPCE_JAVA/V1-old/bin/view/app/ClientEditor$1.class
+WSPCE_JAVA/V1-old/bin/view/app/ClientEditor$ModeEdition.class
+WSPCE_JAVA/V1-old/bin/view/app/ClientEditor.class
+WSPCE_JAVA/V1-old/bin/view/app/GestionProjet.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$ModeEdition.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
