--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ WSPCE_JAVA/V1-old/bin/view/app/GestionProjet.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$ModeEdition.class
 WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$ModeEdition.class
+WSPCE_JAVA/V1-old/bin/view/app/ProjetEditor$1.class
+WSPCE_JAVA/V1-old/bin/view/app/GestionProjet.class
+WSPCE_JAVA/V1-old/bin/view/app/GestionProjet$1.class
+WSPCE_JAVA/V1-old/bin/model/orm/AccessProjet.class
